--- a/Meng/src/assets/main.css
+++ b/Meng/src/assets/main.css
@@ -6,11 +6,14 @@
     padding: 1rem;
     font-weight: normal;
     height: 100vh;
+    /* background-image: url("./background.png"); */
   }
+
   @font-face {
     font-family: 'FangSong';
     src: url('~@/assets/fonts/MyCustomFont.ttf') format('truetype');
   }
+  
   body {
     /* background-image: url('./images/background.png'); */
     background-size: cover;  /* 覆盖整个容器 */
