--- a/Meng/src/assets/main.css
+++ b/Meng/src/assets/main.css
@@ -15,7 +15,7 @@
   }
   
   body {
-    /* background-image: url('./images/background.png'); */
+    /* background-image: url('./images/background2.png'); */
     background-size: cover;  /* 覆盖整个容器 */
     background-repeat: no-repeat;  /* 不重复 */
     font-family: 'FangSong', sans-serif; 
