--- a/Meng/src/assets/main.css
+++ b/Meng/src/assets/main.css
@@ -20,4 +20,5 @@
     background-repeat: no-repeat;  /* 不重复 */
     font-family: 'FangSong', sans-serif; 
     background-color: #F7F7F7;
+    /* background-color: #000; */
   }
