--- a/Meng/src/assets/main.css
+++ b/Meng/src/assets/main.css
@@ -3,7 +3,7 @@
 #app {
     width: 100vw;
     margin: 0;
-    padding: 1rem;
+    /* padding: 1rem; */
     font-weight: normal;
     height: 100vh;
     /* background-image: url("./background.png"); */
